--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,10 +32,11 @@ dependencies:
     sdk: flutter
   http: ^1.1.0
   intl: ^0.18.1
-
+  flutter_spinkit: ^5.2.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
 
 dev_dependencies:
   flutter_test:
